--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "api_fastify",
   "version": "1.0.0",
   "main": "index.js",
+  "engines": {
+    "node": ">=18"
+  },
   "scripts": {
     "dev": "tsx watch src/server.ts",
     "knex": "node --no-warnings --import tsx ./node_modules/.bin/knex",
@@ -26,6 +29,7 @@
     "dotenv": "^16.4.5",
     "fastify": "^5.1.0",
     "knex": "^3.1.0",
+    "pg": "^8.13.1",
     "sqlite3": "^5.1.7",
     "zod": "^3.23.8"
   }
