--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   },
   "scripts": {
     "dev": "tsx watch src/server.ts",
-    "knex": "node --no-warnings --import tsx ./node_modules/.bin/knex",
+    "knex": "node --no-warnings --loader tsx ./node_modules/.bin/knex",
     "test": "vitest",
     "build": "tsup src -d build"
   },
